--- a/package.json
+++ b/package.json
@@ -7,21 +7,24 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
+    "express-session": "^1.15.5",
+    "helmet": "^3.8.1",
     "mongoose": "^4.11.9",
     "morgan": "~1.8.1",
+    "passport": "^0.4.0",
+    "passport-instagram": "^1.0.0",
     "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "eslint": "^4.5.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.3.0"
+    "eslint-config-airbnb-base": "^11.3.2",
+    "eslint-plugin-import": "^2.7.0"
   }
 }
