--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "helmet": "^3.8.1",
     "mongoose": "^4.11.9",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-instagram": "^1.0.0",
     "pug": "~2.0.0-beta11",
