--- a/package.json
+++ b/package.json
@@ -9,23 +9,36 @@
     "body-parser": "~1.17.1",
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "~1.4.3",
+    "csurf": "^1.9.0",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "express-session": "^1.15.5",
+    "express-validator": "^4.1.1",
     "helmet": "^3.8.1",
+    "moment-timezone": "^0.5.13",
     "mongoose": "^4.11.9",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-instagram": "^1.0.0",
     "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "vue": "^2.4.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.2",
+    "css-loader": "^0.28.7",
     "eslint": "^4.5.0",
     "eslint-config-airbnb-base": "^11.3.2",
-    "eslint-plugin-import": "^2.7.0"
+    "eslint-plugin-import": "^2.7.0",
+    "file-loader": "^0.11.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-loader": "^13.0.4",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^3.5.5"
   }
 }
