--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,8 @@
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module"
+    },
+    "rules": {
+        "no-underscore-dangle": "off"
     }
 }
